--- a/src/app/components/dashboard/content/profil-manager/profil/general-information/general-information.component.html
+++ b/src/app/components/dashboard/content/profil-manager/profil/general-information/general-information.component.html
@@ -98,7 +98,7 @@
                         </label>
 
                         <select formControlName="specialityId" [(ngModel)]="selectedSpeciality">
-                            <option style="display:none;"  selected [value]="null ">Choisir une specialitie</option>
+                            <option style="display:none;"  selected [value]="null ">Généraliste</option>
                             <option *ngFor="let speciality of specialities" [value]="speciality.id">{{speciality.name}}</option>
                         </select>
                     </div>
