--- a/src/app/components/dashboard/content/profil-manager/profil-manager.component.html
+++ b/src/app/components/dashboard/content/profil-manager/profil-manager.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <app-header></app-header>
-    <div class="inner-navigation row">
+    <div class="inner-navigation row" *ngIf="!noCabinet">
         <a [class.selected]="selectedOption == 'profil'" routerLink="profil">
             <i class="fa fa-user-md"></i>
             <span>Profil</span>
