--- a/src/app/components/dashboard/content/profil-manager/profil/medical-act-manager/medical-act-submitter/medical-act-submitter.component.html
+++ b/src/app/components/dashboard/content/profil-manager/profil/medical-act-manager/medical-act-submitter/medical-act-submitter.component.html
@@ -4,7 +4,8 @@
             <div class="row">
                 <div class="col col-md-9">
                     <div class="form-group">
-                        <label>Acte medical</label>
+                        <label>Acte médical
+                        </label>
                         <input type="text" [(ngModel)]="medicalAct.name" placeholder="Nom" formControlName="name" class="primary-input" [ngClass]="{'is-invalid' : form.get('name').touched && form.get('name').invalid}">
                         <div class="invalid-feedback" *ngIf="form.get('name').touched && form.get('name').invalid">
                             <div *ngIf="form.get('name').errors.required">l'acte medical est requis</div>
@@ -24,9 +25,15 @@
                 </div>
             </div>
         </form>
-        <button class="primary-button" [disabled]="!form.valid" (click)="submit()">
+        <button *ngIf="!edit" class="primary-button" [disabled]="!form.valid" (click)="submit()">
         Ajouter <i class="fa fa-plus"></i>
+            
     </button>
+
+        <button *ngIf="edit" class="primary-button" [disabled]="!form.valid" (click)="submit()">
+        Éditer <i class="fa fa-edit"></i>
+            
+        </button>
         <div style="clear: both;"></div>
     </div>
 </div>
