--- a/src/app/components/global/yes-no-message/yes-no-message.component.css
+++ b/src/app/components/global/yes-no-message/yes-no-message.component.css
@@ -1,6 +1,5 @@
 .main-container {
     width: 460px;
-    background: white;
     padding: 16px;
 }
 
@@ -15,4 +14,11 @@
 
 p {
     text-align: center;
+    color: #555;
+    font-size: 14px;
+}
+
+.content {
+    padding: 16px;
+    background: white;
 }
