--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -30,6 +30,10 @@
                     <button [disabled]="!form.valid" (click)="login()">identifier</button>
                 </div>
             </div>
+            <div class="create-account">
+                <a routerLink="/sign-up">je n'ai pas de compte , créer un nouveau </a>
+            </div>
+
         </form>
     </div>
 </div>
