--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -73,3 +73,9 @@
 .form-group {
     margin-bottom: 26px;
 }
+
+.create-account {
+    text-align: center;
+    padding: 0px 8px;
+    margin-top: 16px;
+}
