--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-medical-acts/visit-medical-acts.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-medical-acts/visit-medical-acts.component.css
@@ -75,3 +75,11 @@ h5 {
 .info {
     color: #555555;
 }
+
+.create-one {
+    text-align: center;
+}
+
+.create-one button {
+    border-radius: 20px;
+}
